[project]
name = "heliumcli"
dynamic = ["version"]
description = "CLI tool that provides a useful set of tools for maintaining, building, and deploying code in compatible projects."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [{ name = "Alex Laird", email = "contact@alexlaird.com" }]
requires-python = ">=3.8"
dependencies = [
    "GitPython>=2.1.15",
    "PyYAML>=5.1",
    "ansible>=2.10",
    "pyngrok>=7.0.4",
]
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "flake8",
    "flake8-pyproject",
    "pep8-naming"
]

[project.scripts]
helium-cli = "heliumcli.cli:main"

[project.urls]
Sponsor = "https://github.com/sponsors/alexdlaird"
"Source Code" = "https://github.com/HeliumEdu/heliumcli"

[tool.setuptools]
package-dir = { heliumcli = "heliumcli" }

[tool.setuptools.dynamic]
version = { attr = "heliumcli.__version__" }

[tool.coverage.run]
omit = [
    "venv/**",
    "*/tests/**"
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = "build/coverage/coverage.xml"

[tool.coverage.html]
title = "Coverage Report"
directory = "build/coverage"

[tool.flake8]
max-line-length = 119
statistics = true
exclude = "venv/*,build/*,dist/*,.egg-info/*"