[project]
name = "heliumcli"
dynamic = ["version"]
description = "A CLI tool that provides a useful set of tools for maintaining, building, and deploying code in compatible projects"
readme = "README.md"
license = "MIT"
authors = [{ name = "Alex Laird", email = "contact@alexlaird.com" }]
maintainers = [{ name = "Alex Laird", email = "contact@alexlaird.com" }]
requires-python = ">=3.9"
dependencies = [
    "GitPython>=3.0",
    "PyYAML>=5.1",
    "ansible>=2.10",
    "pyngrok>=7.2",
]
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage[toml]",
    "flake8",
    "flake8-pyproject",
    "pep8-naming"
]

[project.scripts]
helium-cli = "heliumcli.cli:main"

[project.urls]
Sponsor = "https://github.com/sponsors/alexdlaird"
"Source Code" = "https://github.com/HeliumEdu/heliumcli"

[tool.setuptools]
package-dir = { heliumcli = "heliumcli" }

[tool.setuptools.dynamic]
version = { attr = "heliumcli.__version__" }

[tool.pytest.ini_options]
junit_family = "legacy"
addopts = [
    "--ignore=venv",
    "--durations=0",
    "--durations-min=2",
    "--junitxml=build/test-results/junit.xml"
]

[tool.coverage.run]
omit = [
    "venv/**",
    "*/tests/**"
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = "build/coverage/coverage.xml"

[tool.coverage.html]
title = "Coverage Report"
directory = "build/coverage"

[tool.flake8]
max-line-length = 119
statistics = true
exclude = "venv/*,build/*,dist/*,.egg-info/*"